--- a/.github/workflows/extpybis_tests.yml
+++ b/.github/workflows/extpybis_tests.yml
@@ -17,13 +17,13 @@ jobs:
       OPENBIS_STATE_DIR: openbis/openbis_state
 
     steps:
-      - name: build docker
+      - name: Build openbis docker
         run: |
           mkdir -p $OPENBIS_STATE_DIR
           docker create --name=openbis -e SERVER_HOST_PORT="localhost:443" -e GROUP_ID=12940 -e GROUP_NAME="docker-host-folder-group" -e CORE_PLUGINS='enabled-modules = dropbox-monitor, dataset-uploader, dataset-file-search, xls-import, openbis-sync, eln-lims, openbis-ng-ui, search-store' -v /home/$OPENBIS_STATE_DIR:/home/openbis/openbis_state -p 8443:443 --restart=always openbis/debian-openbis:latest
           docker start openbis
 
-      - name: checkout repo content
+      - name: Checkout repo content
         uses: actions/checkout@v2
 
       - name: Setup Mambaforge
@@ -37,7 +37,8 @@ jobs:
       - name: Set cache date
         run: echo "DATE=$(date +'%Y%m%d')" >> $GITHUB_ENV
 
-      - uses: actions/cache@v2
+      - name: Check if environment cached
+        uses: actions/cache@v2
         with:
           path: "/usr/share/miniconda3/envs/extpybis"
           key: conda-${{ hashFiles('environment.yml') }}-${{ env.DATE }}-${{ env.CACHE_NUMBER }}
@@ -47,8 +48,7 @@ jobs:
         run: mamba env update -n extpybis -f environment.yml
         if: steps.cache.outputs.cache-hit != 'true'
 
-      - name: set default docker settings
+      - name: Set default docker settings
         shell: bash -l {0}
         run: |
-          cd $GITHUB_WORKSPACE/tests/init_docker/
-          python3 -m init_settings_docker --login admin --password changeit --url https://localhost:8443/openbis/
+          python3 -m tests.init_docker.init_settings_docker --login admin --password changeit --url https://localhost:8443/openbis/
