--- a/.github/workflows/extpybis_tests.yml
+++ b/.github/workflows/extpybis_tests.yml
@@ -9,6 +9,9 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
+env:
+  CACHE_NUMBER: 0
+
 jobs:
   pytest:
     runs-on: ubuntu-latest
@@ -20,8 +23,7 @@ jobs:
       - name: Build openbis docker
         run: |
           mkdir -p $OPENBIS_STATE_DIR
-          docker create --name=openbis -e SERVER_HOST_PORT="localhost:443" -e GROUP_ID=12940 -e GROUP_NAME="docker-host-folder-group" -e CORE_PLUGINS='enabled-modules = dropbox-monitor, dataset-uploader, dataset-file-search, xls-import, openbis-sync, eln-lims, openbis-ng-ui, search-store' -v /home/$OPENBIS_STATE_DIR:/home/openbis/openbis_state -p 8443:443 --restart=always openbis/debian-openbis:latest
-          docker start openbis
+          docker run --name=openbis -e SERVER_HOST_PORT="localhost:443" -e GROUP_ID=12940 -e GROUP_NAME="docker-host-folder-group" -e CORE_PLUGINS='enabled-modules = dropbox-monitor, dataset-uploader, dataset-file-search, xls-import, openbis-sync, eln-lims, openbis-ng-ui, search-store' -v /home/$OPENBIS_STATE_DIR:/home/openbis/openbis_state -p 8443:443 --restart=always openbis/debian-openbis:latest
 
       - name: Checkout repo content
         uses: actions/checkout@v2
