--- a/environment.yml
+++ b/environment.yml
@@ -3,7 +3,7 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - pydantic[version='<2.0.0']
+  - pydantic
   - pybis
   - pandas
   - xlsxwriter
