--- a/.github/workflows/extpybis_tests.yml
+++ b/.github/workflows/extpybis_tests.yml
@@ -19,6 +19,11 @@ jobs:
     env:
       OPENBIS_STATE_DIR: openbis/openbis_state
 
+    strategy:
+      fail-fast: false
+      matrix:
+        python-version: ["3.9.7", "3.10", "3.12"]
+
     steps:
       - name: Build openbis docker
         run: |
@@ -36,6 +41,7 @@ jobs:
             miniforge-variant: Mambaforge
             miniforge-version: latest
             activate-environment: extpybis
+            python-version: ${{ matrix.python-version }}
             use-mamba: true
 
       - name: Set cache date
